<resources>

    <string name="app_name" translatable="false">StickyView</string>

    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="main_activity_header">TenFace</string>
    <string name="action_settings">Settings</string>

    <string name="score">分数：</string>
    <string name="bestscore">最高分：</string>
    <string name="newgame">重新开始</string>

    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>


    <string name="my_account">我的账户</string>
    <string name="check_stock">查看信息</string>
    <string name="free_customer_service">13521656836打给我</string>
    <string name="system_set">系统设置</string>
    <string name="my_invest">我的力量</string>
    <string name="level_2_remark">30天免费特权</string>
    <string name="my_level_2">我的商品</string>
    <string name="now_login">立即登录</string>

</resources>
