<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestscore"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView" />

        <TextView
            android:id="@+id/bestScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/newgame" />

    <LinearLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.tenface.StickyView.view.GameView.GameView
            android:id="@+id/gameView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.tenface.StickyView.view.GameView.GameView>

    </LinearLayout>


</LinearLayout>