<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_f5f8fa"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/_e63256">

        <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:onClick="onBack"-->
            <!--android:paddingLeft="12dp"-->
            <!--android:paddingRight="15dp"-->
            <!--android:src="@drawable/back_btn_white" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_account"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ma_ll_user_info"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/my_account_user_info_bg"
                android:gravity="left|center_vertical"
                android:onClick="onClickUserInfo"
                android:orientation="horizontal"
                android:paddingBottom="16dp"
                android:paddingLeft="20dp"
                android:paddingTop="16dp">

                <ImageView
                    android:id="@+id/iv_user_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/user_avatar_default" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ma_tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/now_login"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ma_tv_stock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/my_account_stock"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/check_stock"
                    android:textSize="16sp"
                    android:textColor="@color/_000f1a"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/_e4e8eb"></View>

                <TextView
                    android:id="@+id/ma_tv_bank_stock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/my_account_bank_stock"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="支付"
                    android:textSize="16sp"
                    android:textColor="@color/_000f1a"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_e4e8eb"></View>

            <RelativeLayout
                android:id="@+id/ma_rl_xf_bind"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:onClick="onClickXfBind">

                <TextView
                    android:id="@+id/ma_tv_xf_bind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="绑定微信"
                    android:textColor="@color/_000f1a"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ma_iv_xf_bind_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:src="@drawable/next_arrow" />

                <TextView
                    android:id="@+id/ma_tv_xf_bind_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_toLeftOf="@+id/ma_iv_xf_bind_arrow"
                    android:text="点击去微信"
                    android:textColor="@color/_e63256"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_e4e8eb"></View>

            <RelativeLayout
                android:id="@+id/ma_rl_level_2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:onClick="onClickMyLevel2">

                <TextView
                    android:id="@+id/ma_tv_leve1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_level_2"
                    android:textColor="@color/_000f1a"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ma_iv_level_2_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:src="@drawable/next_arrow" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:src="@color/_e4e8eb"></ImageView>

            <RelativeLayout
                android:id="@+id/ma_rl_my_financial"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/white"
                android:onClick="onClickMyFinancial">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="我的东西"
                    android:textColor="@color/_000f1a"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:src="@drawable/next_arrow" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:paddingLeft="15dp"
                android:src="@color/_e4e8eb"></ImageView>

            <RelativeLayout
                android:id="@+id/ma_rl_my_invest"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/white"
                android:onClick="onClickMyInvest">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_invest"
                    android:textColor="@color/_000f1a"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:src="@drawable/next_arrow" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_e4e8eb"></View>

            <RelativeLayout
                android:id="@+id/ma_rl_system_set"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:onClick="onClickSystemSet">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/system_set"
                    android:textColor="@color/_000f1a"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ma_iv_system_set_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:src="@drawable/next_arrow" />

                <TextView
                    android:id="@+id/ma_tv_system_set_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_toLeftOf="@+id/ma_iv_system_set_arrow"
                    android:textColor="@color/_7a848a"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_e4e8eb"></View>

            <LinearLayout
                android:id="@+id/ma_ll_free_customer_service"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:onClick="onClickFreeCustomerService"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/my_account_fcs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="@string/free_customer_service"
                    android:textColor="@color/_000f1a"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_e4e8eb"></View>

        </LinearLayout>


    </ScrollView>

</LinearLayout>